feat: enrich 200+ short docs across 12 modules, add detailed code comments
- Expanded 138 ultra-short docs (<20 lines) to 150-1000+ lines each
  - go: 32 docs, kotlin: 27 docs, python: 25 docs
  - java: 12 docs, lua: 12 docs, csharp: 10 docs
  - harmonyos: 9 docs, cpp: 7 docs
- Expanded 120+ short docs (20-50 lines) across all modules
  - c: 26 docs, cpp: 32 docs, react: 26 docs
  - go: 9 docs, python: 12 docs, typescript: 14 docs
  - harmonyos: 6 docs, postgresql: 3 docs, css/js/vue3: 3 docs
- Added detailed Chinese comments to all project source files
  - Vue islands: CheatSheet, ThemeToggle, ProgressToggle, QuizBlock
  - CSS: variables, typography, global, code, components
  - Scripts: all 6 build/audit scripts
  - Config: astro.config.ts
- All docs follow 7-section structure for zero-basis self-learners
- Removed standalone cheatsheet page (embedded in modules)
- Cleaned temp script files from sub-agents